引入MinIO作为图片存储
